# cppTango

./: .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTE.md  CONTRIBUTING.md  CTestCustom.cmake  DevTest.cpp  DevTest.h  DevTestClass.cpp  DevTestClass.h  INSTALL.md  IOAddAttribute.cpp  IOArray2.cpp  IOMisc.cpp  IOMisc.h  IOSeqVec.cpp  IOStr1.cpp  Make.rules  Makefile  Makefile.am  Makefile.in  README  README.md  RELEASE_NOTES  RELEASE_NOTES.md  Readme.md  SigThrow.cpp  TypeCmds.cpp  TypeCmds.h  acc_right.cpp  aclocal.m4  appveyor.yml  attr_misc.cpp  attr_types.cpp  build_scr  cmd_types.cpp  (+30 more)
client/: ApiUtil.h  AttributeProxy.h  Connection.h  Database.h  DbDevice.h  DeviceAttribute.h  DeviceData.h  DevicePipe.h  DeviceProxy.h  Makefile.am  Makefile.in  README  accessproxy.cpp  accessproxy.h  api_util.cpp  apiexcept.cpp  apiexcept.h  asynreq.cpp  attr_proxy.cpp  cbthread.cpp  cbthread.h  dbapi.h  dbapi_attribute.cpp  dbapi_base.cpp  dbapi_cache.cpp  dbapi_class.cpp  dbapi_client.cpp  dbapi_datum.cpp  dbapi_device.cpp  dbapi_history.cpp  dbapi_server.cpp  dbapi_serverdata.cpp  dev_ping.cpp  devapi.h  devapi_attr.cpp  devapi_attr.tpp  devapi_base.cpp  devapi_client.cpp  devapi_data.cpp  devapi_datahist.cpp  (+23 more)
client/helpers/: DeviceProxyHelper.h  Makefile.in  PogoHelper.h  TangoExceptionsHelper.h  Xstring.h
configure/: CMakeLists.txt  cgreen.cmake  check_make_unique.cpp  check_snprintf.cpp  cmake_linux.cmake  cmake_pch_linux.cmake  cmake_pch_win.cmake  cmake_win.cmake  cmake_win_defs.cmake  config.cmake  config.h.in  coveralls.cmake  cpack_linux.cmake  cpack_win.cmake  test_cppzmq_disconnect.cpp  test_zmq_hpp.cpp  test_zmq_version.cpp  toolchain-i686.cmake
cpp_test_ds/: .ddehist  CMakeLists.txt  DevTest.cpp  DevTest.h  DevTestClass.cpp  DevTestClass.h  IOAddAttribute.cpp  IOAddAttribute.h  IOArray2.h  IOLongVar.cpp  IOMisc.cpp  IOMisc.h  Makefile  Makefile.compat  TypeCmds.cpp  build_scr  classfactory.cpp  main.cpp  main_win.cpp  serv.res
cpp_test_ds/fwd_ds/: CMakeLists.txt  FwdTestClass.cpp  FwdTestClass.h  Makefile
cpp_test_ds/win32_ds/: WIN32_DS.OPT  win32_ds.dsp  win32_ds.plg
cpp_test_ds/win32_ds_vs9/: WIN32_DS.sln  win32_ds.vcproj
cpp_test_ds/win64_ds_vc10/: WIN32_DS.sln  win64_ds.vcxproj
cpp_test_ds/win64_ds_vc11/: win64_ds.vcxproj
cpp_test_suite/: CMakeLists.txt  ConfEventBugClient.cpp  Makefile  Makefile_old  Poll.cpp  Poll.tst  README  StopPoll.cpp  StopPoll.tst  acc_right.cpp  add_rem_attr.cpp  att_conf.cpp  attr_conf_test.cpp  attr_manip.cpp  attr_misc.cpp  attr_proxy.cpp  attr_types.cpp  build_runner.bat  build_scr  cmd_types.cpp  copy_devproxy.cpp  ds_cache.cpp  lock.cpp  mem_att.cpp  misc_devattr.cpp  misc_devdata.cpp  misc_devproxy.cpp  obj_prop.cpp  poll_met.cpp  poll_pool.cpp  print_data.cpp  rds.cpp  read_hist.cpp  ring_depth.cpp  run_.cmake  runtest  size.cpp  state_attr.cpp  sub_dev.cpp  syntax.cpp  (+3 more)
cpp_test_suite/asyn/: CMakeLists.txt  Makefile  asyn_attr.cpp  asyn_attr_cb.cpp  asyn_attr_multi.cpp  asyn_cb.cpp  asyn_cb2.cpp  asyn_cb_cmd.cpp  asyn_cmd.cpp  asyn_faf.cpp  asyn_thread.cpp  asyn_write_attr.cpp  asyn_write_attr_multi.cpp  asyn_write_cb.cpp  auto_asyn_cmd.cpp  runtest
cpp_test_suite/cpp_test_ds/: CMakeLists.txt  DevTest.cpp  DevTest.h  DevTestClass.cpp  DevTestClass.h  FileDb.cpp  IOAddAttribute.cpp  IOAddAttribute.h  IOArray1.cpp  IOArray1.h  IOArray2.cpp  IOArray2.h  IOMisc.cpp  IOMisc.h  IOSeqVec.cpp  IOSeqVec.h  IOSetAttr.cpp  IOSetAttr.h  IOStr1.cpp  IOStr1.h  IOStr2.cpp  IOStr2.h  IOStrArray.cpp  IOStrArray.h  IOStruct.cpp  IOStruct.h  Makefile  SigThrow.cpp  SigThrow.h  TypeCmds.cpp  TypeCmds.h  classfactory.cpp  main.cpp  main_win.cpp  serv.res
cpp_test_suite/cxxtest/: CMakeLists.txt  README.txt
cpp_test_suite/environment/: CMakeLists.txt  docker-compose.yml  install_docker_compose.sh  kill_server.sh.cmake  post_test.sh.cmake  pre_test.sh.cmake  run.sh  run_with_fixture.sh.cmake  setup.sh  setup.sh.cmake  setup_database.sh.cmake  setup_devices.sh.cmake  shutdown.sh  start_server.sh.cmake  tango_host.cmake
cpp_test_suite/event/: CMakeLists.txt  Makefile  README  archive_event.cpp  att_conf_event.cpp  att_conf_event_buffer.cpp  att_type_event.cpp  back_ch_event.cpp  back_per_event.cpp  change_event.cpp  change_event64.cpp  change_event_buffer.cpp  data_ready_event.cpp  data_ready_event_buffer.cpp  dev_intr_event.cpp  event_lock.cpp  multi_dev_event.cpp  multi_event.cpp  per_event.cpp  pipe_event.cpp  quality_event.cpp  reco_event.cpp  reco_several_events.cpp  reco_zmq.cpp  runtest  scan.cpp  server_event.cpp  state_event.cpp  stateless_sub.cpp  test_reconnection.sh.cmake  user_event.cpp
cpp_test_suite/log4tango/: clock.cpp
cpp_test_suite/makeprofiles/: default.profile  jenkins.profile  jenkins_no_mcast.profile  taurel.profile  trogucki.profile
cpp_test_suite/new_tests/: CMakeLists.txt  README.txt  compare_test.cpp  compare_test.h  conf_devtest.cpp  cxx_always_hook.cpp  cxx_asyn_reconnection.cpp  cxx_attr.cpp  cxx_attr_conf.cpp  cxx_attr_double_write.cpp  cxx_attr_misc.cpp  cxx_attr_write.cpp  cxx_attrprop.cpp  cxx_blackbox.cpp  cxx_class_dev_signal.cpp  (+44 more)
cppapi/: .mailmap  CMakeLists.txt  Make.rules  Makefile  build_scr  cr_dir
include/: CMakeLists.txt  Makefile.in  config.h.in  tango.h
log4tango/: CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  THANKS  aclocal.m4  bootstrap  configure  configure.in  log4tango.m4  log4tango.pc.in  log4tango.spec.in  make-install.sh
src/: Appender.cpp  AppenderAttachable.cpp  CMakeLists.txt  DllMain.cpp  DummyThreads.cpp  FileAppender.cpp  Filter.cpp  Layout.cpp  LayoutAppender.cpp  Level.cpp  LogSeparator.cpp  LogStream.cpp  LogStreambuf.cpp  Logger.cpp  LoggerStream.cpp  LoggingEvent.cpp  MSThreads.cpp  Makefile.am  Makefile.in  NDC.cpp  OstreamAppender.cpp  PThreads.cpp  PatternLayout.cpp  PortabilityImpl.cpp  PortabilityImpl.hh  RollingFileAppender.cpp  StringUtil.cpp  StringUtil.hh  TimeStamp.cpp  XmlLayout.cpp  snprintf.c
tests/: Makefile.am  Makefile.in  clock.cpp  clock.hh  test_bench.cpp  test_log4tango.cpp
(+1543 files in other folders)
