#TODO different OS
set(DEV1 "test/debian8/10")
set(DEV2 "test/debian8/11")
set(DEV3 "test/debian8/12")
set(FWD_DEV "test/fwd_debian8/10")
set(SERV_NAME "DevTest")
set(INST_NAME "debian8")
set(DEV1_ALIAS "debian8_alias")
set(ATTR_ALIAS "debian8_attr_alias")
site_name(HOST_NAME)
set(FULL_HOSTNAME "${HOST_NAME}:10000")

macro(TEST_SUITE_ADD_TEST test)
    message("Add test ${test}")
    add_executable(${test} ${test}.cpp)
if(CMAKE_VERSION VERSION_GREATER 2.8.11)
    # target_include_directories(${test} PUBLIC ../cxxtest/include)
    target_compile_definitions(${test} PUBLIC "-DVALGRIND -D_PTHREADS -D_REENTRANT")
else()
    # set_property(TARGET ${test} APPEND PROPERTY INCLUDE_DIRECTORIES ../cxxtest/include)
    set_property(TARGET ${test} APPEND PROPERTY COMPILE_DEFINITIONS "VALGRIND;_PTHREADS;_REENTRANT")
endif()

    target_link_libraries(${test} tango ${CMAKE_DL_LIBS})
    add_test(NAME "CPP::${test}"  COMMAND $<TARGET_FILE:${test}> ${DEV1} ${DEV2} ${DEV3} ${DEV1_ALIAS})
endmacro()

add_subdirectory(asyn)
add_subdirectory(event)
add_subdirectory(old_tests)
add_subdirectory(new_tests)
add_subdirectory(cxxtest)
add_subdirectory(environment)
